--- a/src/main/resources/templates/resident-doctor-menu.html
+++ b/src/main/resources/templates/resident-doctor-menu.html
@@ -23,10 +23,10 @@
             ul li:nth-child(6n+6) a:before { background: #009999; }
     </style>
     </head> <body>     <ul>
-    <li><a href="http://localhost:8090/homepage.html" data-text="Home">Home</a></li>
+    <li><a href="http://localhost:8090/resident-doctor" data-text="Home">Home</a></li>
     <li><a href="http://localhost:8090/about.html" data-text="About">About</a></li>
-    <li><a href="http://localhost:8090/admin/show/patient-list" data-text="Patient List">Patient List</a></li>
+    <li><a href="http://localhost:8090/resident-doctor/1/get-managed-patient-list" data-text="Patient List">Patient List</a></li>
     <li><a href="#" data-text="Work">Work</a></li>
-    <li><a href="#" data-text="Team">Team</a></li>
-    <li><a href="#" data-text="Contact">Contact</a></li>
+    <li><a href="#" data-text="Team">Contact</a></li>
+    <li><a href="http://localhost:8090/logout" data-text="Logout">Logout</a></li>
     </ul> </body> </html>
