--- a/src/main/resources/templates/resident-doctor-add-medical-record.html
+++ b/src/main/resources/templates/resident-doctor-add-medical-record.html
@@ -94,8 +94,8 @@
                 });
                 const currentUrl = window.location.href;
                 // Thực hiện yêu cầu fetch
-                const response = await fetch(currentUrl + `${description}`, {
-                    method: 'GET',
+                const response = await fetch(currentUrl + `/${description}`, {
+                    method: 'Get',
                     headers: {
                         'Content-Type': 'application/json'
                     },
@@ -110,7 +110,7 @@
                 });
                     console.log('Success:', response);
                     // Chuyển hướng sau khi hoàn thành
-                    window.location.href = "http://localhost:8090/resident-doctor/1/get-managed-patient-list";
+                  //   window.location.href = "http://localhost:8090/resident-doctor/1/get-managed-patient-list";
                 } else {
                     alert("Error: " + response.statusText);
                     console.error('Error:', response.statusText);
